mount path might just be folder

--- a/cluster/apps/social/lemmy/app/helm-release.yaml
+++ b/cluster/apps/social/lemmy/app/helm-release.yaml
@@ -48,6 +48,6 @@ spec:
         volumeSpec:
           secret:
             secretName: lemmy-config
-        mountPath: /config/config.hjson
+        mountPath: /config
         readOnly: true
 
