--- a/cluster/apps/social/lemmy/ks.yaml
+++ b/cluster/apps/social/lemmy/ks.yaml
@@ -69,6 +69,7 @@ spec:
   retryInterval: 1m
   timeout: 3m
 
+
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
@@ -93,3 +94,26 @@ spec:
   retryInterval: 1m
   timeout: 3m
 
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: cluster-apps-lemmy-routing
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-apps-traefik
+    - name: cluster-apps-lemmy-ui
+  path: ./cluster/apps/social/lemmy/routing
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-ops-cluster
+  healthChecks:
+    - apiVersion: networking.k8s.io/v1
+      kind: Ingress
+      name: lemmy-ingress
+      namespace: social
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
