--- a/cluster/apps/social/lemmy/routing/kustomization.yaml
+++ b/cluster/apps/social/lemmy/routing/kustomization.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./ingress.yaml
+  - ./ingressroute.yaml
 labels:
   - pairs:
       app.kubernetes.io/name: lemmy
