enable syncthing ingress

--- a/cluster/apps/default/syncthing/app/helm-release.yaml
+++ b/cluster/apps/default/syncthing/app/helm-release.yaml
@@ -45,6 +45,7 @@ spec:
             protocol: TCP
     ingress:
       main:
+        enabled: true
         ingressClassName: "traefik"
         annotations:
           # traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd
