--- a/cluster/apps/default/syncthing/app/helm-release.yaml
+++ b/cluster/apps/default/syncthing/app/helm-release.yaml
@@ -48,7 +48,7 @@ spec:
         enabled: true
         ingressClassName: "traefik"
         annotations:
-          # traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd
+          traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
           external-dns/is-public: "true"
