IP address for syncthing

--- a/cluster/apps/default/syncthing/app/helm-release.yaml
+++ b/cluster/apps/default/syncthing/app/helm-release.yaml
@@ -34,6 +34,8 @@ spec:
       listdisc:
         enabled: true
         type: LoadBalancer
+        annotations:
+          metallb.universe.tf/loadBalancerIPs: ${SYNC_ENDPOINT}
         ports:
           discovery:
             enabled: true
