--- a/cluster/flux/vars/cluster-settings.yaml
+++ b/cluster/flux/vars/cluster-settings.yaml
@@ -16,3 +16,4 @@ data:
   PLEX_ENDPOINT: "10.87.42.12"
   METALLB_LB_RANGE: "10.87.42.10-10.87.42.20"
   MOSQUITTO_IP: "10.87.42.13"
+  SYNC_ENDPOINT: "10.87.42.14"
