syncthing correct mount path

--- a/cluster/apps/default/syncthing/app/helm-release.yaml
+++ b/cluster/apps/default/syncthing/app/helm-release.yaml
@@ -67,7 +67,7 @@ spec:
         enabled: true
         storageClass: longhorn
         existingClaim: pvc-syncthing
-        mountPath: /config
+        mountPath: /var/syncthing
         retain: true
     resources:
       requests:
