see if permissions has anything to do with it

--- a/cluster/apps/default/syncthing/app/helm-release.yaml
+++ b/cluster/apps/default/syncthing/app/helm-release.yaml
@@ -26,6 +26,14 @@ spec:
     image:
       repository: syncthing/syncthing
       tag: 1.23.7
+    env:
+      PUID: 1000
+      PGID: 1000
+    podSecurityContext:
+      runAsUser: 1000
+      runAsGroup: 1000
+      fsGroup: 1000
+      fsGroupChangePolicy: "OnRootMismatch"
     service:
       main:
         enabled: true
