--- a/cluster/apps/default/syncthing/app/helm-release.yaml
+++ b/cluster/apps/default/syncthing/app/helm-release.yaml
@@ -26,14 +26,6 @@ spec:
     image:
       repository: syncthing/syncthing
       tag: 1.23.7
-    env:
-      PUID: 1000
-      PGID: 1000
-    podSecurityContext:
-      runAsUser: 1000
-      runAsGroup: 1000
-      fsGroup: 1000
-      fsGroupChangePolicy: "OnRootMismatch"
     service:
       main:
         enabled: true
@@ -55,19 +47,19 @@ spec:
             port: 22000
             protocol: TCP
     ingress:
-      main:
-        enabled: true
-        ingressClassName: "traefik"
-        annotations:
-          # traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd
-          traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-          external-dns/is-public: "true"
-        hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
+      # main:
+      #   enabled: true
+      #   ingressClassName: "traefik"
+      #   annotations:
+      #     # traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd
+      #     traefik.ingress.kubernetes.io/router.entrypoints: websecure
+      #     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+      #     external-dns/is-public: "true"
+      #   hosts:
+      #     - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
+      #       paths:
+      #         - path: /
+      #           pathType: Prefix
     persistence:
       config:
         enabled: true
