disable renovate for terraform as it is only used for the cloudflare provision step

--- a/.github/renovate/labels.json5
+++ b/.github/renovate/labels.json5
@@ -64,5 +64,10 @@
       "matchDatasources": ["docker"],
       "matchPackagePatterns": ["linuxserver/calibre-web"]
     },
+    // disable terraform
+    {
+      "matchDatasources": ["terraform"],
+      "enabled": false
+    },
   ]
 }
