remove old matrix config

--- a/cluster/flux/vars/cluster-secrets.sops.yaml
+++ b/cluster/flux/vars/cluster-secrets.sops.yaml
@@ -5,15 +5,14 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:MgDplwX02G6Z773fHaqLLw==,iv:NAidvOX/3v0+fMpKv/QE7bVenegb/f58tKtAKgWFgHA=,tag:0YUBKjohUNpBqiUF0Z/MrA==,type:str]
-    SECRET_PUBLIC_IP: ENC[AES256_GCM,data:+BDlTr4P1gajjFlf,iv:wzcQlTcGLriQLkGU7QzEDwZ0PzvtBvUXP0AlfLWNiYs=,tag:9bVCLQ9kpHBU1hSn2skK/w==,type:str]
-    SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:REPBmS68OZ/rND9ZHPDa+E0LlYo=,iv:BpYnR7htujt2KJoPMGj4yLrJNExIJWV/dIeh36qaFFg=,tag:l4RTS/AHIFr6yyG0zeYPEQ==,type:str]
-    SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:bwQgAhcNEbg5eTiMaoKhnLmA/6N2BfhiArmfms1L,iv:+ClRicelfKj9p6jiAWijR7dcKxOJ6BA/Ypm+1D6dKmo=,tag:WuNprAE1FrGTVzlMOf7EVQ==,type:str]
-    SECRET_TEST_EMAIL: ENC[AES256_GCM,data:jtMt0hP6M/KMSZNes0bCbmRC+tLh,iv:uswjgPpf70hoMSpUcW13HOUk0K4zXnWEnGDHcaPddk8=,tag:8455105ikfio09YFvQEorw==,type:str]
-    SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:5DMNf5XIYtagL8LJMNJp3Zxjk+n2,iv:zysTh5rbWGHOPUJTugWycUAGam/zVg+n3UpJ9nRCIQI=,tag:7/th4qr8vHA9QZe82EeXCQ==,type:str]
-    SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:oq4XtZ8Icl1pkQblYNxiDdY1lYtYhw==,iv://i3TmT2Z8sTfHQZEoh05gS75IjvLJ7/3N5JHKdC2/c=,tag:cVRIoag7WqZ8P/w+EVm8Og==,type:str]
-    SECRET_SMTP_HOST: ENC[AES256_GCM,data:qMO3fsVw32pTqH7i874KbNO0LBE=,iv:BATmgVdh0waPmq7U6TAp1uw/w9LjuuQDSAL6LpXe2S8=,tag:PnBMl4YKwpG+7DxomPMn9w==,type:str]
-    SECRET_MATRIX_REGISTRATION_SHARED: ENC[AES256_GCM,data:H4lMTY61yKt92kZGdGNobELhvUgJvZ9VdwZS3MP4,iv:vxAHS9AfFVguSHk1wkbIOuD2b4dDaF/BAcrdlyAzlWI=,tag:N2C4IyZtiMeHjIk8xKp71Q==,type:str]
+    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:3RzeIQRmaHRIdwk/ioAZ7w==,iv:8GqDvYMObZJQc34mgycKldldPUJ+Efnru3vJqOiZpmg=,tag:h7MwTcp1wvpHjRUGALcp+A==,type:str]
+    SECRET_PUBLIC_IP: ENC[AES256_GCM,data:dQeepk5pzNMYPcf4,iv:X7Dq1FE5xU00GVfWwPqkXLo6BSVneam+0N0cs70knxg=,tag:QYkHUleA2Y6Zsu9hRBSmIg==,type:str]
+    SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:vZviDVKfcN+Rh2C4kPtbD+lUACE=,iv:Y53Km/BkxGBEGmm6mtKpedSJ4iqrS7Rkf4Kr7wMns+I=,tag:Abi7zL/WYKZdV9dnU+xBHA==,type:str]
+    SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:M4cVNVULY0G4uFdDJzBkoXjkeP/7O2vSRZTaF3jy,iv:i2Vj12/Ye7pDCtvREZ5yLXxjiiUFrZ+jZbF4wsYeaVc=,tag:o53LzFJ1hsc3ptrUufyOtA==,type:str]
+    SECRET_TEST_EMAIL: ENC[AES256_GCM,data:ud/oWbIq4Xph6laWYImvIv5MIl9k,iv:nGUmgusMXsQKv/WPO76YM+X/QJmAHShmzvmsvmVQZFg=,tag:B3IwN8o8qKPIIt/EtIpqVQ==,type:str]
+    SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:KNxechfDVD49tqDSm0l2QLWtUU6p,iv:dZ4KteDB7etv2Mf7Zt3BoYesMRc8S/RKZh9LL8b6deQ=,tag:5mu8VNG9+eC8jVed7nu/+g==,type:str]
+    SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:HmTkXT8t/jSwcl4kMA6S1xpkukC/5w==,iv:gG647E1UqINz/phvEigsE6b2jgVn1ynSeyilRGMBo+Y=,tag:kBTPdjqvN8ZFeNeaJwpVUw==,type:str]
+    SECRET_SMTP_HOST: ENC[AES256_GCM,data:C7vs+w6/zQc8rg3Rz+TFdXg5RAM=,iv:1J8TGwBwUxsDWSsmWyVYe3iIWFNZcMntuCpGOK+1eeU=,tag:pcrSK80bU4TXKJP0bACbZQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,14 +22,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVSzAzZzZ2NXpybTBocFNE
-            VTQrb2RWWHY1dEtqcnAwY1NrSEh4ekNvcUFBCmpqU0tPZVdROFduM3FrcUFNRWJj
-            eHIrWHVBL0UyZzVEU2tDd3JBR2ozaXMKLS0tIGo4d1NFemx0RDBNaG0vNnNUZTlT
-            THRId09ITEFvYzhUZTl2RXgycTRXK1kKXfg7tRrDVRpTMk0m//x44ii3QBBHzrxz
-            TFE7Djgyh6VTRp5ub2VA/YOrskjpf0cD12MYwrt6q53PtNvapMK71Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNRThPMWl3VFdBdm9mWUdh
+            S0RGalVDRm9mMXVMZksrc3h3L3lpNHZRZ0hJCms3cVd5Y1BlOFQwWGxYYUtUdFJp
+            OUZ3NC80ajdFZWVJaW0xUVMxOEs5ZFkKLS0tIFNjdnFxdjdhT0VKbDJ4bGRnd0pF
+            a1pSUk45SDEzT29lQUlVSjBxTlUwUlUK7Xbg7hheDhPuivOKE5/m0Z/Au0ZYEmFh
+            kOoscfsvH/gqkpyGxRPjRqJZC+A3wh6Qr9khLBSewAlqi89obz1RNw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-10-21T23:53:28Z"
-    mac: ENC[AES256_GCM,data:Y6MKIyuU8Ia3RusFGn/YARDiYcGB+0Wy9xXMlXU0485jQOXDjXvGQv4m+UmLeC0RN2Cku38Pi2i8L7kiTuhKiBz9XHphmmE+paj6ymXxR9f4rnOR5nsfMmpJw5+qIknGRsMaSU2LCAoetzrIxE/YIL6x/J/Upaw/r1nyKJ8Ro1Q=,iv:MW4ZA9N8eNSDBpd2X1csSfyQampyPCPCD3oiJA7PXPI=,tag:I3LWJlVcXfzvPJLhkMSZfw==,type:str]
+    lastmodified: "2023-08-20T22:22:41Z"
+    mac: ENC[AES256_GCM,data:+w1jLOFlLp3aqujYqPMBleIMGN6oyzkaxzGKfVlepPHbKv6w2ULExJ0z0ggcm9P8pheqFdkGr/ZksMU3xrq31tIZlFTiE0jTXOwULI0a0YzSeEbvukfVtVstpfQwV0ywNI/V6RmEYnxqm1NBLVgK8X1SXGRZpLC6p4tjf3hM5MQ=,iv:UszS8FW39t+LfQkRavbNYjKuIlXPJY/0F2s/IhbDdwg=,tag:P4F0Y7c/MwpZQPqr5juxzA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
