fix source for some k files

--- a/kubernetes/cluster0/apps/system-upgrade/system-upgrade-controller/ks.yaml
+++ b/kubernetes/cluster0/apps/system-upgrade/system-upgrade-controller/ks.yaml
@@ -9,7 +9,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   wait: true
   interval: 30m
   retryInterval: 1m
@@ -27,7 +27,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   wait: true
   interval: 30m
   retryInterval: 1m
