--- a/kubernetes/cluster0/apps/networking/traefik/ks.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/ks.yaml
@@ -12,7 +12,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
@@ -35,7 +35,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   interval: 30m
   retryInterval: 1m
   timeout: 3m
@@ -53,7 +53,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   interval: 30m
   retryInterval: 1m
   timeout: 3m
@@ -71,7 +71,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   interval: 30m
   retryInterval: 1m
   timeout: 3m
