disable some stuff

--- a/kubernetes/cluster0/apps/networking/kustomization.yaml
+++ b/kubernetes/cluster0/apps/networking/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  - ./external-dns/ks.yaml
+  # - ./external-dns/ks.yaml
   - ./traefik/ks.yaml
   - ./error-pages/ks.yaml
