--- a/kubernetes/cluster0/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/cluster0/flux/repositories/helm/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - jetstack-charts.yaml
+  - cilium-charts.yaml
   - traefik-charts.yaml
   - helm-openldap-charts.yaml
   - authelia-charts.yaml
