--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -69,7 +69,7 @@ spec:
           enabled: true
           className: internal
           hosts:
-            - &host hubble.$SECRET_PUBLIC_DOMAIN
+            - &host "hubble.${SECRET_PUBLIC_DOMAIN}"
           tls:
             - hosts:
                 - *host
