--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -69,10 +69,10 @@ spec:
           enabled: true
           className: internal
           hosts:
-            - &host "hubble.${SECRET_PUBLIC_DOMAIN}"
-          tls:
-            - hosts:
-                - *host
+            - host: &host "hubble.${SECRET_PUBLIC_DOMAIN}"
+              paths:
+                - path: /
+                  pathType: Prefix
     ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.42.0.0/16
