--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -76,7 +76,7 @@ spec:
     # ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.42.0.0/16
-    k8sServiceHost: $CONTROLPLANE_IP
+    k8sServiceHost: ${CONTROLPLANE_IP}
     k8sServicePort: 6443
     kubeProxyReplacement: strict
     kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
