uncomment hubble stuff

--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -67,13 +67,13 @@ spec:
         rollOutPods: true
         ingress:
           enabled: false
-    #       className: "traefik"
-    #       hosts:
-    #         - &host hubble.${SECRET_PUBLIC_DOMAIN}
-    #       tls:
-    #         - hosts:
-    #             - *host
-    # ipam:
+          className: "traefik"
+          hosts:
+            - &host hubble.${SECRET_PUBLIC_DOMAIN}
+          tls:
+            - hosts:
+                - *host
+    ipam:
       mode: kubernetes
     ipv4NativeRoutingCIDR: 10.42.0.0/16
     k8sServiceHost: ${CONTROLPLANE_IP}
