--- a/kubernetes/cluster0/flux/vars/cluster-settings.yaml
+++ b/kubernetes/cluster0/flux/vars/cluster-settings.yaml
@@ -8,9 +8,12 @@ data:
   CLUSTER_NAME: "home-ops-cluster0"
   TIMEZONE: "Pacific/Auckland"
   # cilium
-  LOADBALANCER_IP_POOL: "10.87.1.1/24"
-  CONTROLPLANE_IP: "10.87.1.2"
-  TRAEFIK_IP: "10.87.1.3"
+  # LOADBALANCER_IP_POOL: "10.87.1.1/24"
+  # CONTROLPLANE_IP: "10.87.1.2"
+  # TRAEFIK_IP: "10.87.1.3"
+  LOADBALANCER_IP_POOL: "192.168.121.110/24"
+  CONTROLPLANE_IP: "192.168.121.100"
+  TRAEFIK_IP: "192.168.121.110"
   # external service IPs
   NAS0_IP: "10.87.200.0"
   UNIFI_IP: "10.93.149.58"
