--- a/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
@@ -27,9 +27,8 @@ spec:
       replicas: 3
     service:
       enabled: true
-      type: LoadBalancer
       annotations:
-        metallb.universe.tf/loadBalancerIPs: ${TRAEFIK_ENDPOINT}
+        io.cilium/lb-ipam-ips: ${TRAEFIK_ENDPOINT}
       spec:
         externalTrafficPolicy: Cluster
     tlsStore:
