--- a/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
@@ -27,6 +27,7 @@ spec:
       replicas: 3
     service:
       enabled: true
+      type: LoadBalancer
       annotations:
         io.cilium/lb-ipam-ips: ${TRAEFIK_ENDPOINT}
       spec:
