--- a/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
       enabled: true
       type: LoadBalancer
       annotations:
-        io.cilium/lb-ipam-ips: ${TRAEFIK_ENDPOINT}
+        io.cilium/lb-ipam-ips: ${TRAEFIK_IP}
       spec:
         externalTrafficPolicy: Cluster
     tlsStore:
