don't let home assistant start before its database

--- a/cluster/apps/default/home-assistant/app/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/app/helm-release.yaml
@@ -8,6 +8,8 @@ spec:
   dependsOn:
   - name: longhorn
     namespace: longhorn-system
+  - name: home-assistant-db
+    namespace: default
   interval: 15m
   chart:
     spec:
