set retention period for loki logs, temporarily small to make sure it works

--- a/cluster/apps/log-system/loki-stack/helm-values.yaml
+++ b/cluster/apps/log-system/loki-stack/helm-values.yaml
@@ -25,7 +25,10 @@ spec:
     grafana:
       enabled: false
     loki:
+      structuredConfig:
+        limits_config:
+          retention_period: 1d
       persistence:
         enabled: true
         storageClassName: longhorn
-        size: 15Gi
+        size: 30Gi
