--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -78,7 +78,7 @@ spec:
     ipv4NativeRoutingCIDR: 10.42.0.0/16
     k8sServiceHost: ${CONTROLPLANE_IP}
     k8sServicePort: 6443
-    kubeProxyReplacement: strict
+    kubeProxyReplacement: true
     kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
     l2announcements:
       enabled: true
