--- a/cluster/flux/vars/cluster-settings.yaml
+++ b/cluster/flux/vars/cluster-settings.yaml
@@ -12,7 +12,8 @@ data:
   FLANNEL_IFACE: "enp88s0"
   APISERVER_ENDPOINT: "10.87.42.0"
   TRAEFIK_ENDPOINT: "10.87.42.10"
-  PIHOLE_ENDPOINT: "10.87.42.11"
+  PRIMARY_DNS_ENDPOINT: "10.87.42.11"
+  SECONDARY_DNS_ENDPOINT: "10.87.42.15"
   PLEX_ENDPOINT: "10.87.42.12"
   METALLB_LB_RANGE: "10.87.42.10-10.87.42.20"
   MOSQUITTO_IP: "10.87.42.13"
