--- a/cluster/flux/vars/cluster-secrets.sops.yaml
+++ b/cluster/flux/vars/cluster-secrets.sops.yaml
@@ -5,14 +5,15 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:3RzeIQRmaHRIdwk/ioAZ7w==,iv:8GqDvYMObZJQc34mgycKldldPUJ+Efnru3vJqOiZpmg=,tag:h7MwTcp1wvpHjRUGALcp+A==,type:str]
-    SECRET_PUBLIC_IP: ENC[AES256_GCM,data:dQeepk5pzNMYPcf4,iv:X7Dq1FE5xU00GVfWwPqkXLo6BSVneam+0N0cs70knxg=,tag:QYkHUleA2Y6Zsu9hRBSmIg==,type:str]
-    SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:vZviDVKfcN+Rh2C4kPtbD+lUACE=,iv:Y53Km/BkxGBEGmm6mtKpedSJ4iqrS7Rkf4Kr7wMns+I=,tag:Abi7zL/WYKZdV9dnU+xBHA==,type:str]
-    SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:M4cVNVULY0G4uFdDJzBkoXjkeP/7O2vSRZTaF3jy,iv:i2Vj12/Ye7pDCtvREZ5yLXxjiiUFrZ+jZbF4wsYeaVc=,tag:o53LzFJ1hsc3ptrUufyOtA==,type:str]
-    SECRET_TEST_EMAIL: ENC[AES256_GCM,data:ud/oWbIq4Xph6laWYImvIv5MIl9k,iv:nGUmgusMXsQKv/WPO76YM+X/QJmAHShmzvmsvmVQZFg=,tag:B3IwN8o8qKPIIt/EtIpqVQ==,type:str]
-    SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:KNxechfDVD49tqDSm0l2QLWtUU6p,iv:dZ4KteDB7etv2Mf7Zt3BoYesMRc8S/RKZh9LL8b6deQ=,tag:5mu8VNG9+eC8jVed7nu/+g==,type:str]
-    SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:HmTkXT8t/jSwcl4kMA6S1xpkukC/5w==,iv:gG647E1UqINz/phvEigsE6b2jgVn1ynSeyilRGMBo+Y=,tag:kBTPdjqvN8ZFeNeaJwpVUw==,type:str]
-    SECRET_SMTP_HOST: ENC[AES256_GCM,data:C7vs+w6/zQc8rg3Rz+TFdXg5RAM=,iv:1J8TGwBwUxsDWSsmWyVYe3iIWFNZcMntuCpGOK+1eeU=,tag:pcrSK80bU4TXKJP0bACbZQ==,type:str]
+    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:QnY4WZQ11Lk+k7E7FgQ39A==,iv:PdSp0YLoLgO6RQZ6jSeV5STUCFy8lIbe2txP6NzPhCA=,tag:/IX1q0nTSKJIgc9HH/K/ow==,type:str]
+    SECRET_PUBLIC_IP: ENC[AES256_GCM,data:WhlE9N+gABCqRfky,iv:pBmF2SeeWdcqUvw/JHQ6J0cfoZwRVUY4AjZm/lBYe0I=,tag:4eoc8yc7FNLQbPRkUdCJjw==,type:str]
+    SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:R+cv1MIyBeBhBm2J4qjs+7BX6Yw=,iv:H8we4tAWkepVknU6Cgq8YpZXx5ZM/qTgxVW16Ya00Z4=,tag:i//7Yt+bW2/jVfgfLoA90A==,type:str]
+    SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:4ktQ5hMBHbLOrc1Ufq6Io6baOSA+2jWFBXGv6eyl,iv:EpI6Axfdi485DcdPG2C8UsSbQKFBX5dcmfXQNlBkGSY=,tag:4J7Y26F22yjwdoc8GA3ZKg==,type:str]
+    SECRET_TEST_EMAIL: ENC[AES256_GCM,data:unSJak91hWcyWLycZS02yBkCylBp,iv:TgG6Fznc2ANh6YtekG2qzR7H46nk4BPqmc6hIOLDTHk=,tag:FxnkIikKRN/knZVtZG59jA==,type:str]
+    SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:nINTsynuySyBIFKkYp6/bmyNMck+,iv:ooJK2vqwKQPn8Zvm8DyJp6TNvO7p+onn5QwCcfecnUc=,tag:Y0PZVR+n84LgGstMGOGc0Q==,type:str]
+    SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:utIbY2ZH4DuJf88w6cyNWT9eFScsOw==,iv:J7rqS80On80MNes1JZoApoa0VEPh+czsQ3OXcZiitUk=,tag:M0n+lCGerK+euwtaAH0Fyw==,type:str]
+    SECRET_SMTP_HOST: ENC[AES256_GCM,data:4SNVi6OPVx9Gxd70im6p0s2DRZI=,iv:ugEHQFJ0JvMOhdMKOp/VjSwQPCVJgsbCNViCSnjui/4=,tag:kZ3wplvVbHGgMITbdfz4SQ==,type:str]
+    BLOCKY_REDIS_PASSWORD: ENC[AES256_GCM,data:Lgs2USZRIyVNm+Tgn3JmnivtQrpkx/o2hUnPJcCs4BGfSXK8o8Trsk768DAOdhJnUEDXwVWf7VoLmbd6tiKPSzkuoDck2+pmyoZqc+1304oo02M3m0+FnYc6g3MZby5su21N3Q==,iv:iKJgeH4SY0AkqMFLwiOPz6h77DrclSYGY3/OJBJsZMU=,tag:+SgR3lfgzO6Tnw2IGdzmhw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,14 +23,14 @@ sops:
         - recipient: age17r33fln8jyfzrdxshtnv38dmyst33q8g3c2c5f9r8lcvkxa4ggrq07sffm
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNRThPMWl3VFdBdm9mWUdh
-            S0RGalVDRm9mMXVMZksrc3h3L3lpNHZRZ0hJCms3cVd5Y1BlOFQwWGxYYUtUdFJp
-            OUZ3NC80ajdFZWVJaW0xUVMxOEs5ZFkKLS0tIFNjdnFxdjdhT0VKbDJ4bGRnd0pF
-            a1pSUk45SDEzT29lQUlVSjBxTlUwUlUK7Xbg7hheDhPuivOKE5/m0Z/Au0ZYEmFh
-            kOoscfsvH/gqkpyGxRPjRqJZC+A3wh6Qr9khLBSewAlqi89obz1RNw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3T0pvcVg0S3d4L3g1QTNm
+            K2txUFZmemxNdk5UZ2JMamMxaUZVckRZS0FRCmEwQnZhSTlKa1VGUGlXTEp3dVEy
+            QzFzcXhMY282T3NxVGFxTWF3SFJqTFEKLS0tIHYxSTBkY2FFOXNpcVB4WXNyaEhq
+            dm16ak82Q2R5Z2RNeUR2QW9zbkwwL0EKrIYYDE2LbJFlWEpEMv8xA0oFIRggLkjI
+            3qWiSH76AKHOKWf6teFj+D18JgGeBdTRdx+h6J18PWMIooIA5WSvGw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-20T22:22:41Z"
-    mac: ENC[AES256_GCM,data:+w1jLOFlLp3aqujYqPMBleIMGN6oyzkaxzGKfVlepPHbKv6w2ULExJ0z0ggcm9P8pheqFdkGr/ZksMU3xrq31tIZlFTiE0jTXOwULI0a0YzSeEbvukfVtVstpfQwV0ywNI/V6RmEYnxqm1NBLVgK8X1SXGRZpLC6p4tjf3hM5MQ=,iv:UszS8FW39t+LfQkRavbNYjKuIlXPJY/0F2s/IhbDdwg=,tag:P4F0Y7c/MwpZQPqr5juxzA==,type:str]
+    lastmodified: "2023-09-25T22:57:40Z"
+    mac: ENC[AES256_GCM,data:lKam7eZnKX9EwEowgKpX6yzt0IzLWJ+9ff34MAWoDDHs+8W0y1bxv30tRx1AzzPGi0Hy/tlYSQN6uMWGUQ8KkQ4HcgoVWMAlafwDCeZT8Zp7hHtcNGbcFdIkBVPzokYcRtfvRl69VzZOw8FCytgFiixj8bv2deBAnIPG2tpqfow=,iv:3l+TjDeVuY1sDyY9HLZzAwKC4+WhpVxp74R0K0doBsM=,tag:43YkU04JYD3MQmxCfyGUJA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.0
