--- a/cluster/apps/networking/blocky/ks.yaml
+++ b/cluster/apps/networking/blocky/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-blocky
+  name: cluster-apps-blocky-redis
   namespace: flux-system
 spec:
   path: ./cluster/apps/networking/blocky/redis
