--- a/cluster/apps/networking/blocky/app/config/config.yaml
+++ b/cluster/apps/networking/blocky/app/config/config.yaml
@@ -7,6 +7,13 @@ upstream:
 
 bootstrapDns: tcp+udp:1.1.1.1
 
+customDNS:
+  mapping: # some useful defaults
+    unifi.${SECRET_PUBLIC_DOMAIN}: ${TRAEFIK_ENDPOINT}
+    traefik.${SECRET_PUBLIC_DOMAIN}: ${TRAEFIK_ENDPOINT}
+    longhorn.${SECRET_PUBLIC_DOMAIN}: ${TRAEFIK_ENDPOINT}
+    auth.${SECRET_PUBLIC_DOMAIN}: ${TRAEFIK_ENDPOINT}
+
 blocking:
   blackLists:
     suspicious:
