--- a/cluster/apps/networking/blocky/ks.yaml
+++ b/cluster/apps/networking/blocky/ks.yaml
@@ -34,7 +34,7 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: blocky
+      name: blocky-primary
       namespace: networking
   interval: 30m
   retryInterval: 1m
