--- a/cluster/apps/networking/blocky/app/helm-release-primary.yaml
+++ b/cluster/apps/networking/blocky/app/helm-release-primary.yaml
@@ -88,6 +88,6 @@ spec:
         enabled: true
         type: configMap
         name: blocky
-        subPath: config.yaml
-        mountPath: /app/config.yaml
+        subPath: config.yml
+        mountPath: /app/config.yml
         readOnly: true
