--- a/cluster/apps/networking/blocky/app/kustomization.yaml
+++ b/cluster/apps/networking/blocky/app/kustomization.yaml
@@ -10,7 +10,7 @@ configMapGenerator:
   - name: blocky
     namespace: networking
     files:
-      - ./config/config.yaml
+      - ./config/config.yml
 
 configurations:
   - kustomize-config.yaml
