--- a/kubernetes/cluster0/apps/networking/blocky/ks.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/ks.yaml
@@ -5,11 +5,11 @@ metadata:
   name: cluster-apps-blocky-redis
   namespace: flux-system
 spec:
-  path: ./cluster/apps/networking/blocky/redis
+  path: ./kubernetes/cluster0/apps/networking/blocky/redis
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
@@ -26,11 +26,11 @@ metadata:
   name: cluster-apps-blocky
   namespace: flux-system
 spec:
-  path: ./cluster/apps/networking/blocky/app
+  path: ./kubernetes/cluster0/apps/networking/blocky/app
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
