--- a/kubernetes/cluster0/flux/vars/cluster-settings.yaml
+++ b/kubernetes/cluster0/flux/vars/cluster-settings.yaml
@@ -14,8 +14,8 @@ data:
   LOADBALANCER_IP_POOL: "192.168.121.110/24"
   CONTROLPLANE_IP: "192.168.121.100"
   TRAEFIK_IP: "192.168.121.110"
-  PRIMARY_DNS_ENDPOINT: "192.168.121.111"
-  SECONDARY_DNS_ENDPOINT: "192.168.121.115"
+  PRIMARY_DNS_IP: "192.168.121.111"
+  SECONDARY_DNS_IP: "192.168.121.115"
   # external service IPs
   NAS0_IP: "10.87.200.0"
   UNIFI_IP: "10.93.149.58"
