--- a/kubernetes/cluster0/apps/networking/blocky/app/helm-release-secondary.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/app/helm-release-secondary.yaml
@@ -52,7 +52,7 @@ spec:
         enabled: true
         type: LoadBalancer
         annotations:
-          io.cilium/lb-ipam-ips: ${SECONDARY_DNS_ENDPOINT}
+          io.cilium/lb-ipam-ips: ${SECONDARY_DNS_IP}
         ports:
           dns-tcp:
             enabled: true
