add missing pass for blocky redis

--- a/kubernetes/cluster0/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/cluster0/flux/vars/cluster-secrets.sops.yaml
@@ -5,14 +5,15 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:xzXldYxfVg/HH425rrP3Fg==,iv:EW/jnbukSvDeKCSUgzOlVj0XoPGTz7IKFas7K6LYqbU=,tag:ti4fnhC+HQa6Co6BKnmRcQ==,type:str]
-    SECRET_PUBLIC_IP: ENC[AES256_GCM,data:EacnA9SBTZ7FUxPf,iv:P/TuYbx+FPUtV27oGxYOVTqA2hKXayGqIHHAGmRTZhI=,tag:0rCK2cxcocSuA64FsL1WEQ==,type:str]
-    SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:R2Jh6AxR5vQtJOoykaMWD5dX1l8=,iv:Z4+2hOA3ei3nv80EGr2Xekaygm9fH6NGbHheCukaPVQ=,tag:LZshhj+EbvA07z5X2w51qA==,type:str]
-    SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:rKnkvJdi+celGVwcQNwWo82kLeTge3XszB6RHLB+,iv:R5wGmmMqLdUKgfrkflqk1IPBnT442x+z7nD2t2TUOqU=,tag:fnZWlosTI3m2gYAOjW7ErQ==,type:str]
-    SECRET_TEST_EMAIL: ENC[AES256_GCM,data:hhabVkq2xt3uMB3Q97VxqlUj3x0B,iv:jI7gHNsVQQqtU5a2S7w6iaUbfzkykhFxm4QGe0xV0+0=,tag:RsskfrhlrVZ8vxrf0yP5bA==,type:str]
-    SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:AmfCZcoSPGeyBprSp4cMORN11fG6,iv:Qoba3lVsVF9Kl0xcGs3/ULWvJLeMSEiFG9OfH1wO9sQ=,tag:y0WL1SgPKnyx/ZAjdLpCSQ==,type:str]
-    SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:vMt44+Ge9i8XtxFSpNK9RK3am6dRYQ==,iv:KI84cng4TKQFaKGkfnPqbvber5eLvkHwSe+dSMpxeU0=,tag:a6CAn0vBY6Y0wVaSvcE9iw==,type:str]
-    SECRET_SMTP_HOST: ENC[AES256_GCM,data:GPcsccLGuaZNP9JiPL0acuDyVrM=,iv:H1XNO9MoYtarY87wV57z1qUWbLYb4mny4gADFwMT/I0=,tag:cv1ddt4AcilzTlIi4EU6qw==,type:str]
+    SECRET_PUBLIC_DOMAIN: ENC[AES256_GCM,data:PWkQ9hsrpZT7XtAUceDNng==,iv:JiPTQd5bsLMrXzt1SXklrS4bG4JgxjDNScz3pDIoSj8=,tag:jfji4UXILXUO7G6A9h6rvg==,type:str]
+    SECRET_PUBLIC_IP: ENC[AES256_GCM,data:YldF9/UvrS9qYxik,iv:8iffRUnoE7rGp/1Z6TulEc7xlWGXc2HaVgb7M66ymwE=,tag:cYrx8iNGxiasD08GqMlvVA==,type:str]
+    SECRET_ADMIN_EMAIL: ENC[AES256_GCM,data:3nciogd/g0my2sxJ4q39bPNY5O0=,iv:lgSrr9wpfLQnIoigaa9gIgGuZTPS4rEudn4q/aeBIOk=,tag:ikOojGJWXg+HQExjUR09vg==,type:str]
+    SECRET_NOTIFICATION_EMAIL: ENC[AES256_GCM,data:sAGpTaj1l4dtg20X3Y5kreUkodKuDvihafN1+YEQ,iv:LQN8TrsPJfUcBLKFXx+HjYMTwLucPmWrhZrOliDH1Rk=,tag:eAdM1jvJCFsuR7nHLfbR4g==,type:str]
+    SECRET_TEST_EMAIL: ENC[AES256_GCM,data:qriMlYpv3hDKovCsqSbNxzKfq02t,iv:RxWmoyhMu9f9aWP+sa6etYxhRVRPVaue9dZMk+Skgzk=,tag:bQpKS7bKgCn48NcuR4tPDQ==,type:str]
+    SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:/kzInyJ86w78zk5CK1O+Svis2yLB,iv:mxWk5Nk6vTOIR1U9NT+Gis+ww24hjufw/i38PmyEzc8=,tag:+IKUvfN/JuJ5a6yk1B/Fng==,type:str]
+    SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:GYmC4oYFqubqhwPPpEixAYw4/P4BeQ==,iv:pfeG2gTnChNcMwJ6o/AxpDIktTUVgmhf6LpxEKj83Ao=,tag:MPqFNQsQyekjfUqkMY9+Uw==,type:str]
+    SECRET_SMTP_HOST: ENC[AES256_GCM,data:peyFlB/lKAOLgAt0euCQy20ghAQ=,iv:Wmn6L8eqdU171X9D0xZlZ9F9Wyv/R8GuaI6GYxHEqWs=,tag:0mcxfROtHe8u/kZCgenqnQ==,type:str]
+    BLOCKY_REDIS_PASSWORD: ENC[AES256_GCM,data:UBl6GLdCMXu+8JgDrmPsPXc0i+LA0nwpSUahRPSwcJChjLu0c4FfJ84H4/nHGigFDCIXSldUTZr5LIxawBUyk1OBesN6VeDoEILL4b8TJ+G5BQXfM5EdIFHPlsBLrpk1tGVu2A==,iv:svoX93emc6ABWxvC/8aYpdsW7ZiDbhpARPsJ8qqPYqY=,tag:GaBe9xnSCRZDpZ1X7mZCpg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,14 +23,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGUktqMVVHZFV4RGZaOEhT
-            WVVPZDhEK05YRkpjdWZabWpwbW5zOERYNWdrCnpISTR2QTJ3eWRCUDBkNlA1Snpx
-            b3ZteG5pWWhHM0gyOGJOVUJldko1VnMKLS0tIGxObmZGR1huSzBmOWlqaHJ4NFNI
-            SHZ3Y3ArWmtuTE93RFFwTWcwZmg2dEkKiL6KGed+h0z8sqdLQ+nIiUg9LHvR/nI1
-            2TCOJm7MUFBauoMzJmSHHsNwOUC1IsTaMCMjlChWxokqjuC8VFF3cg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoOFBhTnAvM01iMDl3RUo2
+            MHdoVkMyTnpTcXdsMWkxZTlBcUNLZXYzVXcwClpaRzhNRmx2ZUh3OTA0V2M3YVpj
+            alc2RVBLUSt1S0pSVnBQWHRSSjU3L0kKLS0tIGF0L2RQNTJqSXRKUTJTaER6b0VQ
+            TDFhbGZzNE53N0RXKys2c3dXVWVpNU0KfDXx2m38eG1BIDFm+lkcKpVvRagWRwM3
+            2N1zp+RIexXhRyjCni6ACpOUTGxaXS0aVSxEW5UGmiQupkoTeZ4b6A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-08-20T22:38:02Z"
-    mac: ENC[AES256_GCM,data:k8HrgbKx8KDAW1eIvkPDdv99qunDSr7HmYX1JZVqmUyAid4weXz1F7Q/XXo0YXwA5MzkAzSkUXZvqK7QvPjXISAz6AkMbkCHrFxW3NtbdBOlUi6dbI0gmDuhIFkcjHyMeg0ivQW4rh4Vqh9JLf187LX6x4BJPU0l0QaqZj48Hk0=,iv:KZYTZnXxc6BZ+gyIllSzjmm8FvocLoqdnR2EqFkozJ4=,tag:VLVfjgkDkwy+i/M8ZmedyQ==,type:str]
+    lastmodified: "2023-09-27T19:56:43Z"
+    mac: ENC[AES256_GCM,data:9xxRXW5/mG9b8WcfXp8k/IHWtEaK+EtAAkl/+p+wisQ7J5Kl95NR3A2Nz3CB+B6qwnybpgzVfmKNcMch273giKJymwbETPsY1Eb1SAQ1F4rSB8BAyRG+O7fG2hhxYSJljCWNVfa0LCN1KfCJ7p2wOabvLQfSjFdkKHW8XMSiWjU=,iv:ldTIw/fEwdWuIfjjW3NX4XqgCWcNM66ub4D6e2tzCP0=,tag:A0DrYBhbIfA8IXEEWjGOkA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.0
