--- a/kubernetes/cluster0/apps/default/nginx-test/app/ingress.yaml
+++ b/kubernetes/cluster0/apps/default/nginx-test/app/ingress.yaml
@@ -6,10 +6,9 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: nginx-test
+  ingressClassName: traefik
   rules:
-    - host: 192.168.121.110
-      http:
+    - http:
         paths:
         - path: /
           pathType: Prefix
