traefik annotation for nginx

--- a/kubernetes/cluster0/apps/default/nginx-test/app/ingress.yaml
+++ b/kubernetes/cluster0/apps/default/nginx-test/app/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nginx-test
   namespace: default
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
 spec:
   ingressClassName: traefik
   rules:
