also temporarily comment this bit out

--- a/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
@@ -74,7 +74,7 @@ spec:
         exposedPort: 443  
         tls:
           enabled: true
-          options: "default"
+          # options: "default"
     logs:
       general:
         level: debug
