--- a/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
@@ -30,10 +30,10 @@ spec:
       type: LoadBalancer
       annotations:
         io.cilium/lb-ipam-ips: ${TRAEFIK_IP}
-    # tlsStore:
-    #   default:
-    #     defaultCertificate:
-    #       secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
+    tlsStore:
+      default:
+        defaultCertificate:
+          secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
     tlsOptions:
       default:
         minVersion: VersionTLS12
@@ -74,7 +74,7 @@ spec:
         exposedPort: 443  
         tls:
           enabled: true
-          # options: "default"
+          options: "default"
     logs:
       general:
         level: debug
