move critical apps to new cluster, prepare rebuild

--- a/kubernetes/cluster0/flux/vars/cluster-settings.yaml
+++ b/kubernetes/cluster0/flux/vars/cluster-settings.yaml
@@ -7,15 +7,14 @@ metadata:
 data:
   CLUSTER_NAME: "home-ops-cluster0"
   TIMEZONE: "Pacific/Auckland"
-  # cilium
-  # LOADBALANCER_IP_POOL: "10.87.1.1/24"
-  # CONTROLPLANE_IP: "10.87.1.2"
-  # TRAEFIK_IP: "10.87.1.3"
-  LOADBALANCER_IP_POOL: "192.168.121.110/24"
-  CONTROLPLANE_IP: "192.168.121.100"
-  TRAEFIK_IP: "192.168.121.110"
-  PRIMARY_DNS_IP: "192.168.121.111"
-  SECONDARY_DNS_IP: "192.168.121.115"
+  CONTROLPLANE_IP: "10.87.42.0"
+  LOADBALANCER_IP_POOL: "10.87.42.10/28"
+  TRAEFIK_IP: "10.87.42.10"
+  PRIMARY_DNS_IP: "10.87.42.11"
+  SECONDARY_DNS_IP: "10.87.42.15"
+  PLEX_IP: "10.87.42.12"
+  MOSQUITTO_IP: "10.87.42.13"
+  SYNC_ENDPOINT: "10.87.42.14"
   # external service IPs
   NAS0_IP: "10.87.200.0"
   UNIFI_IP: "10.93.149.58"
