--- a/kubernetes/cluster0/apps/monitoring/kustomization.yaml
+++ b/kubernetes/cluster0/apps/monitoring/kustomization.yaml
@@ -6,7 +6,4 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  - ./blocky/ks.yaml
-  - ./external-dns/ks.yaml
-  - ./traefik/ks.yaml
-  - ./error-pages/ks.yaml
+  - ./uptime-kuma/ks.yaml
