--- a/kubernetes/cluster0/apps/networking/traefik/ks.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/ks.yaml
@@ -5,8 +5,8 @@ metadata:
   name: cluster-apps-traefik
   namespace: flux-system
 spec:
-  # dependsOn:
-  #   - name: cluster-apps-cert-manager
+  dependsOn:
+    - name: cluster-apps-cert-manager
   path: ./kubernetes/cluster0/apps/networking/traefik/app
   prune: true
   sourceRef:
@@ -21,41 +21,41 @@ spec:
   retryInterval: 1m
   timeout: 3m
 
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-# kind: Kustomization
-# metadata:
-#   name: cluster-apps-traefik-certificates
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: cluster-apps-traefik
-#   path: ./kubernetes/cluster0/apps/networking/traefik/certificates
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-ops-cluster0
-#   interval: 30m
-#   retryInterval: 1m
-#   timeout: 3m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: cluster-apps-traefik-certificates
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-apps-traefik
+  path: ./kubernetes/cluster0/apps/networking/traefik/certificates
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-ops-cluster0
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
 
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-# kind: Kustomization
-# metadata:
-#   name: cluster-apps-traefik-external-services
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: cluster-apps-traefik
-#   path: ./kubernetes/cluster0/apps/networking/traefik/external-services
-#   prune: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-ops-cluster0
-#   interval: 30m
-#   retryInterval: 1m
-#   timeout: 3m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: cluster-apps-traefik-external-services
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-apps-traefik
+  path: ./kubernetes/cluster0/apps/networking/traefik/external-services
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-ops-cluster0
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
 
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
