become password for ansible prepare step

--- a/.taskfiles/AnisbleTasks.yaml
+++ b/.taskfiles/AnisbleTasks.yaml
@@ -10,7 +10,7 @@ tasks:
   prepare:
     desc: Prepare all the k8s nodes for running k3s
     dir: "{{.ANSIBLE_DIR}}"
-    cmd: ansible-playbook -i {{.ANSIBLE_INVENTORY_DIR}}/hosts.yaml {{.ANSIBLE_PLAYBOOK_DIR}}/cluster-prepare.yaml
+    cmd: ansible-playbook -K -i {{.ANSIBLE_INVENTORY_DIR}}/hosts.yaml {{.ANSIBLE_PLAYBOOK_DIR}}/cluster-prepare.yaml
 
   install:
     desc: Install Kubernetes on the nodes
