--- a/kubernetes/cluster0/apps/networking/blocky/ks.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/ks.yaml
@@ -10,6 +10,8 @@ spec:
   sourceRef:
     kind: GitRepository
     name: home-ops-cluster0
+  dependsOn:
+    - name: cluster-apps-longhorn
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
@@ -31,6 +33,8 @@ spec:
   sourceRef:
     kind: GitRepository
     name: home-ops-cluster0
+  dependsOn:
+    - name: cluster-apps-blocky-redis
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
