correct ns for secret

--- a/kubernetes/cluster0/apps/home/home-assistant/db/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/home/home-assistant/db/secret.sops.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: home-assistant-db-secrets
-    namespace: default
+    namespace: home
 type: Opaque
 # seems to need both keys, idk why...
 stringData:
-    password: ENC[AES256_GCM,data:IYRKyb+HIRUyd849oJhSaskZFn0D9V7pAfHsx5mNfuLcTMAr68iWtY3gke1zL/dmmMk=,iv:+g2+C7Lkh7L3nrkJmJdx9egnS7R5GXzvbcbi1vlT1LU=,tag:KGAHXA+C4agWv6LB844R9Q==,type:str]
-    postgres-password: ENC[AES256_GCM,data:y5y3R/p9FIVdDGIHGfH3dY2iSuV1zHwg4nkADpxu1skU335JPduACLD4+00WuWSILOw=,iv:dqLmzOank2I0GkM/cUyx/pMuKu57aF0KpDkj3nqvB6Q=,tag:9pkBDGZTF6N4Z2LYRyNSug==,type:str]
+    password: ENC[AES256_GCM,data:ezKkjZg6cqS5y8MU2kMHQFmWkGNYJ1iuxo6z/RGOgvo5LBMzFMIvxMIeVwlijoaBvcg=,iv:zPnCEL6ZYEYUHhUUHqAUetmoCVP63i2UaVq4k3MUneU=,tag:ragWEsNt5abFH+Y2kXgSwA==,type:str]
+    postgres-password: ENC[AES256_GCM,data:52a+MoKgtn59ZnBj3hMRDl1gr3LKGff/8PpaNEDOLlHctlAHgpycDZimBerOnXdEWbQ=,iv:reg2wZWvxffRmZLj0sbv8CXM47S17vbXCHZp4m9T6v0=,tag:Guv3HEiMXsPzBOGHHnQNZw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLL21YclgwK0FzeGo4VVV0
-            ZHN2OTNtQ2NCdTBGN2E1cm1KdGxqb1dNMUU4Cnl2TExadU02bk9MWEVWNTFiVmdv
-            Nk9Ja0IxWUhMNHZuTU5qZHhDMVh6SkUKLS0tIEthdWZWaVpuWUoxckc2ZFFJL01v
-            R2d3Z0RKRkdTYUxrekQ3MHYreFNFejgKGmicQNRMt0VsdEsmwQvsIBWjM2j3kkcV
-            0k+IdcLzUmoE9RfG1TmyZPNnS3gE1Mkmfk8P00rpHsvsd5cGuVzOEA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHclhDTjRzOE82ZWxhNUtE
+            M2RDczFUaE5nQUJxUnc1Q3p1c1pmMEdzTWpBCiszTllyY0g2STRqRjhxdjNQWVZ3
+            eG5hUG1RTnAvQUJGM3hyT0ZhK09ReHMKLS0tIEVnNER3dW9nMlN6T2FuUWxhRFVm
+            Y0I2STV6bis0Nkw0VEo3UXR0aU9kamcK4VElThqsd9Me7YRHwN2wli6gUu14qZ+k
+            V3tHxsr/IYPiqlBqqnjX4IDvy8krhRBf8AhFDUONBdB7j6yVE5dxLg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-28T17:57:14Z"
-    mac: ENC[AES256_GCM,data:Z4PMVQ0yJ8SZglbhW8YTwAyVo0owLVRuMWD0mw59edFPQLNd5EVQBqqYMdV+ZqGTsiRx4sWPCy+qIFlvHvz4m6oIb6olhRjMo5GnzMjaIc3UFmBfrL26EjJrJ4nPz1tPJ1txVlfZj/2BFpW5qHBHQR7n6jJxjgF4XpKuINBEuTE=,iv:kBvaVHPy9vob+9BfoG6CEHSRy2ijlnU/jTkJB/+eGsA=,tag:4KUMUdSfH6x2zJYtoqPHvA==,type:str]
+    lastmodified: "2023-09-28T23:27:42Z"
+    mac: ENC[AES256_GCM,data:BzOSR8DV1wG4T4469myJDPk3a9t3q8Shc/FiQZ2gQW99AjEfa2TEsyjpQ4SJiCD6G7kh1dcmRE8/4sf7OwHBKMWLgB6x0tydM5W3qqLAvg1x1O/KmOEZQDgCZi/L7p7wO+vXDPsnKlKjC3Pj1BJA2/bNRQkMkVpp1/lg9pX1DTM=,iv:rhPMlWMc5TquGhGRXay6GvThpesugueuf9Q8qaiUSNU=,tag:t3H9OzZYyzGwB6sP2PgfzA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
