--- a/kubernetes/cluster0/apps/kube-system/kustomization.yaml
+++ b/kubernetes/cluster0/apps/kube-system/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./cilium/ks.yaml
-  # - ./intel-device-plugin/ks.yaml
-  # - ./node-feature-discovery/ks.yaml
+  - ./intel-device-plugin/ks.yaml
+  - ./node-feature-discovery/ks.yaml
