--- a/kubernetes/cluster0/apps/kube-system/node-feature-discovery/ks.yaml
+++ b/kubernetes/cluster0/apps/kube-system/node-feature-discovery/ks.yaml
@@ -7,11 +7,11 @@ metadata:
   name: cluster-apps-node-feature-discovery
   namespace: flux-system
 spec:
-  path: ./cluster/apps/kube-system/node-feature-discovery/app
+  path: ./kubernetes/cluster0/apps/kube-system/node-feature-discovery/app
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-cluster
+    name: home-ops-cluster0
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
