--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -69,7 +69,12 @@ spec:
         enabled: true
         rollOutPods: true
         ingress:
-          enabled: false
+          enabled: true
+          annotations:
+            traefik.ingress.kubernetes.io/router.entrypoints: websecure
+            traefik.ingress.kubernetes.io/router.middlewares: "auth-chain-authelia-auth@kubernetescrd"
+            external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+            external-dns/is-public: "true"
           className: "traefik"
           hosts:
             - &host hubble.${SECRET_PUBLIC_DOMAIN}
