--- a/kubernetes/cluster0/apps/home/kustomization.yaml
+++ b/kubernetes/cluster0/apps/home/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./home-assistant/ks.yaml
+  - ./mosquitto/ks.yaml
+  - ./zigbee2mqtt/ks.yaml
