--- a/kubernetes/cluster0/apps/home/zigbee2mqtt/app/configmap.yaml
+++ b/kubernetes/cluster0/apps/home/zigbee2mqtt/app/configmap.yaml
@@ -37,7 +37,7 @@ data:
     mqtt:
       base_topic: zigbee2mqtt
       include_device_information: true
-      server: mqtt://mosquitto.default.svc.cluster.local:1883
+      server: mqtt://mosquitto.home.svc.cluster.local:1883
       keepalive: 60
       reject_unauthorized: true
       version: 4
@@ -69,7 +69,7 @@ data:
       '0xa4c1386fbc7f5d44':
         friendly_name: emptyroom sensor
       '0x001788010bce1d1e':
-        friendly_name: hall sensor
+        friendly_name: hall sensor far
       '0xa4c138254b08c819':
         friendly_name: spareroom sensor
       '0x001788010b8f655c':
@@ -78,5 +78,10 @@ data:
         friendly_name: water_leak_detector_2
       '0xa4c1380a611f6df7':
         friendly_name: water_leak_detector_1
+      '0x001788010cd6b8d2':
+        friendly_name: hall sensor near
+      '0xa4c13865001bffff':
+        friendly_name: fan controller
     external_converters:
-      - LILYGO.Light
+      - fan_controller.js
+      - lilygo_light.js
